# amos-ss16-proj5

./: .gitignore  .travis.yml  Bill of Material.md  CMakeLists.txt  Doxyfile  client.cpp  readme.md  server.cpp
amos-ss16-proj5/amos-ss16-proj5.xcodeproj/: project.pbxproj
amos-ss16-proj5/amos-ss16-proj5.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
amos-ss16-proj5/amos-ss16-proj5.xcodeproj/project.xcworkspace/xcuserdata/richard.xcuserdatad/: UserInterfaceState.xcuserstate
amos-ss16-proj5/src/CarCommunication/: CMakeLists.txt
assets/: 10_inject_index_html  run
assets/default.conf/: default.conf
assets/html/: index.html
docker/: Dockerfile  build
docker/assets/: finish_docker_build
docker/assets/default.conf/: default.conf.diff
docker/assets/html/: index.html
docker/assets/nginx.conf/: nginx.conf  nginx.conf.diff
docker/assets/openCV/include/opencv2/: cvconfig.h
docker/assets/openCV/lib/: libopencv_aruco.so.3.1.0  libopencv_bgsegm.so.3.1.0  libopencv_bioinspired.so.3.1.0  libopencv_calib3d.so.3.1.0  libopencv_ccalib.so.3.1.0  libopencv_datasets.so.3.1.0  libopencv_dnn.so.3.1.0  libopencv_dpm.so.3.1.0  libopencv_face.so.3.1.0  libopencv_features2d.so.3.1.0  libopencv_flann.so.3.1.0  libopencv_fuzzy.so.3.1.0  libopencv_highgui.so.3.1.0  libopencv_imgcodecs.so.3.1.0  libopencv_line_descriptor.so.3.1.0  libopencv_ml.so.3.1.0  libopencv_objdetect.so.3.1.0  libopencv_optflow.so.3.1.0  libopencv_photo.so.3.1.0  libopencv_plot.so.3.1.0  libopencv_reg.so.3.1.0  libopencv_rgbd.so.3.1.0  libopencv_saliency.so.3.1.0  libopencv_shape.so.3.1.0  libopencv_stereo.so.3.1.0  libopencv_stitching.so.3.1.0  libopencv_structured_light.so.3.1.0  libopencv_superres.so.3.1.0  libopencv_surface_matching.so.3.1.0  libopencv_text.so.3.1.0  libopencv_tracking.so.3.1.0  libopencv_video.so.3.1.0  libopencv_videoio.so.3.1.0  libopencv_videostab.so.3.1.0  libopencv_xfeatures2d.so.3.1.0  libopencv_ximgproc.so.3.1.0  libopencv_xobjdetect.so.3.1.0  libopencv_xphoto.so.3.1.0
docker/assets/openCV/lib/pkgconfig/: opencv.pc
docker/assets/openCV/share/OpenCV/: OpenCVConfig.cmake  (+2 more)
info/: Bill of Material.md  BillOfMaterial.md
messaging/hdf_reader/: Readme.md
messaging/hdf_reader/src/: CMakeLists.txt  HDFFileReaderExample.cpp
messaging/protobuf_deserializer/protobuf_deserializer/: CMakeLists.txt  Readme.md
messaging/protobuf_deserializer/protobuf_deserializer/protofiles/: MsgCameraImage.proto  header.proto
messaging/protobuf_deserializer/protobuf_deserializer/src/: main.cpp
protofiles/: CMakeLists.txt  MsgCameraImage.pb.h  MsgCameraImage.proto  header.proto
script/: amos-ss16-proj5-gui.sh  amos-ss16-proj5.sh  demo-amos-ss16-proj5-gui.sh  depoyment.sh  helper.sh  readme.md  ubuntuCafClient.sh  ubuntuCafServer.sh  ubuntuCommunication.sh  ubuntuCommunicationClient.sh  ubuntuCommunicationServer.sh  ubuntuStreamDecoder.sh  ubuntuVid.sh
src/: HDFFileReaderExample.cpp  MainHeader.h  MainHeader.h~  main.cpp  main1.cpp  main2.cpp  msg_cameraimage_reader.h
src/CarCommunication/: CMakeLists.txt  Makefile  client.cpp  csCommunication.pb.cc  csCommunication.pb.h  csCommunication.proto  message.pb.cc  message.pb.h  message.proto  pbbroker  protoagent.cpp  protoagent.h  server.cpp
src/Communication/: client.cpp  server.cpp
src/ObjectDetection/: CMakeLists.txt  cars3.xml  cascade_haar_detector.cpp  cascade_haar_detector.h  cascade_vehicle_detector.cpp  cascade_vehicle_detector.h  daimler_people_detector.cpp  daimler_people_detector.h  detection.cpp  detection.h  detectionMain.cpp  detector.cpp  detector.h  element.cpp  element.h  frame_detection_data.cpp  frame_detection_data.h  hog_people_detector.cpp  hog_people_detector.h  humandetector.cpp  main.cpp  people_detector.cpp  people_detector.h  readme.md  template_matching_people_detector.cpp  template_matching_people_detector.h  vehicle_detector.cpp  vehicle_detector.h
src/ProcessControl/: basicqueue.cpp  basicqueue.h  blockingqueue.h  controller.cpp  controller.h  main.cpp  multithreadedcontroller.cpp  multithreadedcontroller.h  queue.cpp  queue.h
src/ScenarioAnalysation/: CMakeLists.txt  analyser.cpp  analyser.h  humans_in_front_of_bus_scenario.cpp  humans_in_front_of_bus_scenario.h  main.cpp  scenario.cpp  scenario.h
src/StreamDecoder/: CMakeLists.txt  FrameSelector.cpp  FrameSelector.h  HDFReader.h  StreamDecoderModuleDocumentation.md  bayer_image.cpp  bayer_image.h  frame_selector.cpp  frame_selector.h  frame_selector_factory.cpp  frame_selector_factory.h  hdf5_frame_selector.cpp  hdf5_frame_selector.h  hdf_reader.cpp  hdf_reader.h  image.cpp  image.h  image_view.cpp  image_view.h  image_viewer.cpp  image_viewer.h  main.cpp  mp4_frame_selector.cpp  mp4_frame_selector.h  mp4_image.cpp  mp4_image.h  protobuf_image_wrapper.cpp  protobuf_image_wrapper.h  protobuf_wrapper.h  readme  readme.md
src/StreamDecoder/DecoderPipeline/: CMakeLists.txt  DecoderPipeline.cpp  DecoderPipeline.h  main.cpp
src/StreamDecoder/DecompressionExample/: CMakeLists.txt  main.cpp
src/StreamDecoder/FrameSelector/: CMakeLists.txt  FrameSelector.cpp  FrameSelector.h  main.cpp
src/StreamDecoder/HDFDecoder/: CMakeLists.txt  CMakeLists.txt~  HDFFileReaderExample.cpp  HDFReader.cpp  HDFReader.h  hdf_reader.cpp  hdf_reader.h  main.cpp
src/StreamDecoder/ProtobufDeserializer/: CMakeLists.txt  CMakeLists.txt~  msg_cameraimage_reader.cpp  msg_cameraimage_reader.h  protobufMain.cpp  readme.md
src/StreamDecoder/ProtobufDeserializer/protofiles/: CMakeLists.txt  MsgCameraImage.pb.cc  header.pb.cc
src/StreamDecoder/protofiles/: CameraImage.pb.cc  CameraImage.pb.h  Header.pb.cpp  Header.pb.h  camera_image.pb.cpp  camera_image.pb.h  header.pb.cpp  header.pb.h
src/caf/: CMakeLists.txt  Makefile  message.pb.cc  message.pb.h  pbbroker  pingpong.pb.cc  pingpong.pb.h  protoagent.cpp  protoagent.h  protobuf_broker.cpp  protobuf_broker.cpp~  protobuf_broker.h  simple_broker  simple_broker.cpp  simple_broker.cpp~  simple_broker.h
src/imageprocessing/: CMakeLists.txt  humandetector.cpp  humandetector.h  readme.md
src/messaging/: msg_cameraimage_reader.h
